--- a/my-react-app/src/Profile/Profile.css
+++ b/my-react-app/src/Profile/Profile.css
@@ -6,18 +6,19 @@ html, body{
     background-color: lightgoldenrodyellow;
 }
 
-.about-page-container{
+
+.profile-page-container{
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     background-color: lightgoldenrodyellow;
-    padding-bottom: 20px;
 }
 
 .maintitle{
     color: black;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 4vh;
     text-align: center;
     border-style: groove;
@@ -26,11 +27,23 @@ html, body{
     box-sizing: border-box;
 }
 
-#AboutInfo{
-    font-size: 2vh;
+#EmailInfo{
+    position: relative;
     text-align: center;
-    width: 70%;
-    background-color: blanchedalmond;
-    padding: 20px; 
-    border-radius: 10px; 
+    font-size: 2vh;
+}
+#passwordcss{
+    position: relative;
+    text-align: center;
+    font-size: 2vh;
+    background-color: var(--backgroundColor);
+    padding: 5px;
+}
+#submitbutton{
+    position: relative;
+    text-align: center;
+    font-size: 2vh;
+}
+#Hello-User{
+    font-size: 2vh;
 }
