Added create listings page, needs backend functionality
Read name

--- a/my-react-app/src/Navbar/Navbar.css
+++ b/my-react-app/src/Navbar/Navbar.css
@@ -52,7 +52,8 @@
   }
 
   .money{
-    position: absolute;
+    position: relative;
     align-items: center;
+    justify-content: center;
     size-adjust: 80%;
     }
