--- a/my-react-app/src/Listings/Listings.css
+++ b/my-react-app/src/Listings/Listings.css
@@ -15,7 +15,7 @@ html, body{
     background-color: lightgoldenrodyellow;
     min-height: 100vh;
 }
-.listing-image {
+.listing-image{
     width: 200px;
     height: 200px;
     object-fit: cover;
@@ -23,7 +23,7 @@ html, body{
     margin-bottom: 10px;
 }
 
-.listing-item {
+.listing-item{
     border: 1px solid #ddd;
     padding: 15px;
     margin: 10px;
@@ -42,7 +42,7 @@ html, body{
     margin: 2rem 0;
 }
 
-.search-container {
+.search-container{
     position: relative;
     text-align: center;
     font-size: 2vh;
@@ -55,7 +55,7 @@ html, body{
     gap: 10px;
 }
 
-.search-input {
+.search-input{
     width: 35%;
     padding: 10px;
     font-size: 2vh;
@@ -66,12 +66,12 @@ html, body{
     color: black;
 }
 
-.search-input:focus {
+.search-input:focus{
     border-color: black;
     background-color: white;
 }
 
-.search-button {
+.search-button{
     position: relative;
     text-align: center;
     font-size: 2vh;
@@ -84,6 +84,75 @@ html, body{
     width: 10%;
 }
 
-.search-button:hover {
+.search-button:hover{
     background-color: #d9d9d9;
+}
+
+.listings-grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /*4 items per row*/
+    gap: 15px;
+    width: 80%;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.listing-item{
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 6px;
+    background-color: #f8df6f;
+    transition: transform 0.2s, background-color 0.2s;
+}
+
+.listing-item:hover{
+    transform: scale(1.05);
+    background-color: #e0e0e0;
+}
+
+.listing-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.listing-title{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    justify-content: center;
+    text-align: center;
+}
+
+.listing-price, .listing-seller, .listing-description{
+    font-size: 16px;
+    margin-bottom: 5px;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.pagination-buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    gap: 20px;
+}
+
+.pagination-button{
+    padding: 10px 20px;
+    font-size: 16px;
+    border: 1px solid #000000;
+    background-color: #fda22a;
+    color: rgb(0, 0, 0);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.pagination-button:disabled{
+    background-color: #b0b0b0;
+    cursor: not-allowed;
 }
