--- a/my-react-app/src/About/About.css
+++ b/my-react-app/src/About/About.css
@@ -15,6 +15,9 @@ html, body{
     background-color: lightgoldenrodyellow;
     padding-bottom: 20px;
 }
+.about-page-container .maintitle{
+    margin-top: 0;
+}
 
 .maintitle{
     color: black;
