--- a/my-react-app/src/CreateListing/CreateListing.css
+++ b/my-react-app/src/CreateListing/CreateListing.css
@@ -15,6 +15,9 @@ html, body{
     align-items: center; 
     background-color: lightgoldenrodyellow;
 }
+.createlisting-page-container .maintitle{
+    margin-top: 0;
+}
 
 .maintitle{
     color: black;
