--- a/my-react-app/src/Registration/Registration.css
+++ b/my-react-app/src/Registration/Registration.css
@@ -4,6 +4,8 @@
 
 html, body{
     background-color: lightgoldenrodyellow;
+    margin:0;
+    padding:0;
 }
 
 
@@ -14,8 +16,20 @@ html, body{
     justify-content: center;
     align-items: center; 
     background-color: lightgoldenrodyellow;
+    padding-top: 0;
+    margin-top: 0;
 }
-
+.registration-page-container .maintitle{
+    margin-top: 0;}
+.form-container{
+    background-color: burlywood;
+    padding: 30px;
+    border-radius: 20px;
+    text-align: center;
+    justify-content: center;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
 .maintitle{
     color: black;
     font-family: 'Times New Roman', Times, serif;
@@ -25,6 +39,7 @@ html, body{
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
+    position: relative;
 }
 
 #usernamecss{
@@ -42,10 +57,20 @@ html, body{
     text-align: center;
     font-size: 2vh;
 }
-#submitbutton{
-    position: relative;
-    text-align: center;
+#submitbutton input[type="submit"]{
+    background-color: white;
+    color: black;
+    padding: 12px 24px;
     font-size: 2vh;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    width: 80%;
+    transition: background-color 0.3s ease;
+    border-color: black;
+}
+#subtmitbutton input[type="submit"]:hover{
+    background-color: lightgoldenrodyellow;
 }
 
 .validation-message {
