--- a/my-react-app/src/Listings/Listings.css
+++ b/my-react-app/src/Listings/Listings.css
@@ -91,20 +91,71 @@ html, body{
     background-color: #d9d9d9;
 }
 
+.listings-grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /*4 items per row*/
+    gap: 15px;
+    width: 80%;
+    justify-content: center;
+    margin-top: 20px;
+}
 
-.loading, .no-more {
+.listing-item{
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 6px;
+    background-color: #f8df6f;
+    transition: transform 0.2s, background-color 0.2s;
+}
+
+.listing-item:hover{
+    transform: scale(1.05);
+    background-color: #e0e0e0;
+}
+
+.listing-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.listing-title{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    justify-content: center;
     text-align: center;
-    padding: 20px;
-    font-size: 1.2em;
-    color: #666;
 }
 
-.loading {
-    animation: pulse 1.5s infinite;
+.listing-price, .listing-seller, .listing-description{
+    font-size: 16px;
+    margin-bottom: 5px;
+    justify-content: center;
+    text-align: center;
 }
 
-@keyframes pulse {
-    0% { opacity: 0.6; }
-    50% { opacity: 1; }
-    100% { opacity: 0.6; }
+
+.pagination-buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    gap: 20px;
+}
+
+.pagination-button{
+    padding: 10px 20px;
+    font-size: 16px;
+    border: 1px solid #000000;
+    background-color: #fda22a;
+    color: rgb(0, 0, 0);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.pagination-button:disabled{
+    background-color: #b0b0b0;
+    cursor: not-allowed;
 }
