--- a/my-react-app/src/Registration/Registration.css
+++ b/my-react-app/src/Registration/Registration.css
@@ -29,6 +29,7 @@ html, body{
     justify-content: center;
     width: 300px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    border: 1px solid #000000;
 }
 .maintitle{
     color: black;
@@ -67,7 +68,7 @@ html, body{
     cursor: pointer;
     width: 80%;
     transition: background-color 0.3s ease;
-    border-color: black;
+    border: 1px solid #000000;
 }
 #subtmitbutton input[type="submit"]:hover{
     background-color: lightgoldenrodyellow;
