--- a/my-react-app/src/Listings/Listings.css
+++ b/my-react-app/src/Listings/Listings.css
@@ -18,7 +18,7 @@ html, body{
     }
 }
 
-.loading {
+.loading{
     text-align: center;
     font-size: 1.5rem;
     margin: 20px 0;
@@ -33,6 +33,16 @@ html, body{
     background-color: lightgoldenrodyellow;
     min-height: 100vh;
 }
+.listings-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: tan;
+    border-radius: 8px;
+    border: 1px solid #000000;
+}
+
 .listings-page-container .maintitle{
     margin-top: 0;
 }
@@ -45,7 +55,7 @@ html, body{
 }
 
 .listing-item{
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     padding: 15px;
     margin: 10px;
     border-radius: 8px;
@@ -133,7 +143,7 @@ html, body{
 }
 
 .listing-item {
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     padding: 15px;
     border-radius: 8px;
     background-color: #f8df6f;
